# not-yt-dlapi

./: .gitignore  README.md  not-yt-dlapi.code-workspace  pyproject.toml
.claude/: settings.json
src/not_yt_dlapi/: __init__.py  base_api_endpoint.py  constants.py  exceptions.py  protocol.py  update_files.py
src/not_yt_dlapi/_tools/: rebuild_models.py  remove_redundant_files.py
src/not_yt_dlapi/channel/: __init__.py  models.json  models.py
src/not_yt_dlapi/channel_section/: __init__.py  models.json  models.py
src/not_yt_dlapi/playlist/: __init__.py  models.json  models.py
src/not_yt_dlapi/playlist_item/: __init__.py  models.json  models.py
src/not_yt_dlapi/playlists/: __init__.py  models.json  models.py
src/not_yt_dlapi/tools/: rebuild_models.py  remove_redundant_files.py
src/not_yt_dlapi/video/: __init__.py  models.json  models.py  schema.json
tests/: conftest.py  test_channel_sections.py  test_channels.py  test_not_yt_dlapi.py  test_playlist.py  test_playlist_items.py  test_playlists.py  test_videos.py  utils.py
