[project]
name = "not-yt-dlapi"
version = "0.1.0"
description = "YouTube API wrapper."
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "ryn-cx", email = "262888154+ryn-cx@users.noreply.github.com" }
]
dependencies = [
  "get-around",
  "good-ass-pydantic-integrator",
  "google-api-python-client>=2.190.0",
]

[dependency-groups]
dev = [
  "prek>=0.3.3",
  "pytest>=9.0.2",
  "ruff>=0.15.2",
  "ty>=0.0.58",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.ty.src]
exclude = ["**/models.py"]

[[tool.mypy.overrides]]
module = ["*.models", "models"]
ignore_errors = true

[tool.ruff.lint]
select = ["ALL"]  # Enable all linters.

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D"]  # Asserts and missing docstrings allowed in tests.

[tool.uv.sources]
good-ass-pydantic-integrator = { git = "https://github.com/ryn-cx/good-ass-pydantic-integrator" }
get-around = { git = "https://github.com/ryn-cx/get-around" }
